--- a/trunk/Mvvm/Mvvm.csproj
+++ b/trunk/Mvvm/Mvvm.csproj
@@ -157,19 +157,19 @@
     <Compile Include="ViewModels\Core\Collections\IVMCollectionExpression.cs" />
     <Compile Include="ViewModels\Core\VMDescriptorBuilder\VMDescriptorConfiguration.cs" />
     <Compile Include="ViewModels\Core\VMDescriptor\IVMDescriptorBuilder.cs" />
-    <Compile Include="ViewModels\Core\PropertyBehaviors\CacheBehavior.cs" />
-    <Compile Include="ViewModels\Core\PropertyBehaviors\CollectionBehaviors\DelegatePopulatorCollectionBehavior.cs" />
-    <Compile Include="ViewModels\Core\PropertyBehaviors\ParentSetterBehavior.cs" />
-    <Compile Include="ViewModels\Core\PropertyBehaviors\PropertyBehaviors\DelegateViewModelFactory.cs" />
-    <Compile Include="ViewModels\Core\PropertyBehaviors\PropertyBehaviors\IsLoadedIndicatorBehavior.cs" />
-    <Compile Include="ViewModels\Core\PropertyBehaviors\PropertyBehaviors\ManualUpdateCollectionPropertyBehavior.cs" />
-    <Compile Include="ViewModels\Core\PropertyBehaviors\PropertyBehaviors\ManualUpdatePropertyBehavior.cs" />
-    <Compile Include="ViewModels\Core\PropertyBehaviors\PropertyBehaviors\ManualUpdateViewModelPropertyBehavior.cs" />
-    <Compile Include="ViewModels\Core\PropertyBehaviors\PropertyBehaviors\RevalidationBehavior.cs" />
-    <Compile Include="ViewModels\Core\PropertyBehaviors\PropertyBehaviors\ViewModelFactoryAccessorBehavior.cs" />
-    <Compile Include="ViewModels\Core\PropertyBehaviors\PropertyBehaviors\ViewModelWithSourceAcessorBehavior.cs" />
-    <Compile Include="ViewModels\Core\PropertyBehaviors\ViewModelBehaviors\ChangeListenerBehavior.cs" />
-    <Compile Include="ViewModels\Core\PropertyBehaviors\ViewModelBehaviors\ManualUpdateCoordinatorBehavior.cs" />
+    <Compile Include="ViewModels\Core\GeneralBehaviors\CacheBehavior.cs" />
+    <Compile Include="ViewModels\Core\GeneralBehaviors\CollectionBehaviors\DelegatePopulatorCollectionBehavior.cs" />
+    <Compile Include="ViewModels\Core\GeneralBehaviors\ParentSetterBehavior.cs" />
+    <Compile Include="ViewModels\Core\GeneralBehaviors\PropertyBehaviors\DelegateViewModelFactory.cs" />
+    <Compile Include="ViewModels\Core\GeneralBehaviors\PropertyBehaviors\IsLoadedIndicatorBehavior.cs" />
+    <Compile Include="ViewModels\Core\GeneralBehaviors\PropertyBehaviors\ManualUpdateCollectionPropertyBehavior.cs" />
+    <Compile Include="ViewModels\Core\GeneralBehaviors\PropertyBehaviors\ManualUpdatePropertyBehavior.cs" />
+    <Compile Include="ViewModels\Core\GeneralBehaviors\PropertyBehaviors\ManualUpdateViewModelPropertyBehavior.cs" />
+    <Compile Include="ViewModels\Core\GeneralBehaviors\PropertyBehaviors\RevalidationBehavior.cs" />
+    <Compile Include="ViewModels\Core\GeneralBehaviors\PropertyBehaviors\ViewModelFactoryAccessorBehavior.cs" />
+    <Compile Include="ViewModels\Core\GeneralBehaviors\PropertyBehaviors\ViewModelWithSourceAcessorBehavior.cs" />
+    <Compile Include="ViewModels\Core\GeneralBehaviors\ViewModelBehaviors\ChangeListenerBehavior.cs" />
+    <Compile Include="ViewModels\Core\GeneralBehaviors\ViewModelBehaviors\ManualUpdateCoordinatorBehavior.cs" />
     <Compile Include="ViewModels\Core\PropertySelector.cs" />
     <Compile Include="ViewModels\Core\PropertyTypeHelper.cs" />
     <Compile Include="ViewModels\Core\Validation\PropertyBehaviors\DescendantValidationBehavior.cs" />
@@ -190,8 +190,8 @@
     <Compile Include="ViewModels\Core\Collections\CollectionBehaviors\PopulatorCollectionBehavior.cs" />
     <Compile Include="ViewModels\- No Namespace -\IVMCollection.cs" />
     <Compile Include="ViewModels\Core\Collections\VMCollection.cs" />
-    <Compile Include="ViewModels\Core\PropertyBehaviors\Legacy\DisplayValueBehavior.cs" />
-    <Compile Include="ViewModels\Core\PropertyBehaviors\PropertyBehaviors\RefreshableValueCacheBehavior.cs" />
+    <Compile Include="ViewModels\Core\GeneralBehaviors\Legacy\DisplayValueBehavior.cs" />
+    <Compile Include="ViewModels\Core\GeneralBehaviors\PropertyBehaviors\RefreshableValueCacheBehavior.cs" />
     <Compile Include="ViewModels\Core\TypeDescriptor\ViewModelTypeDescriptor.cs" />
     <Compile Include="ViewModels\Core\Validation\CollectionBehaviors\CollectionValidatorBehavior.cs" />
     <Compile Include="ViewModels\Core\Common\ChangeArgs.cs" />
@@ -205,15 +205,15 @@
     <Compile Include="ViewModels\Core\Validation\ValidationError.cs" />
     <Compile Include="ViewModels\Core\Common\VMPropertyPath.cs" />
     <Compile Include="ViewModels\Core\- Todo -\ItemCreationController.cs" />
-    <Compile Include="ViewModels\Core\Kernel\VMKernel.cs" />
+    <Compile Include="ViewModels\Core\VMKernel.cs" />
     <Compile Include="ViewModels\Core\Collections\PropertyBehaviors\CollectionFactoryBehavior.cs" />
     <Compile Include="ViewModels\Core\Collections\PropertyBehaviors\CollectionPopulatorBehavior.cs" />
-    <Compile Include="ViewModels\Core\PropertyBehaviors\Legacy\DefaultManualUpdateBehavior.cs" />
-    <Compile Include="ViewModels\Core\PropertyBehaviors\Legacy\DelegateCommandBehavior.cs" />
-    <Compile Include="ViewModels\Core\PropertyBehaviors\Legacy\IMutabilityCheckerBehavior.cs" />
+    <Compile Include="ViewModels\Core\GeneralBehaviors\Legacy\DefaultManualUpdateBehavior.cs" />
+    <Compile Include="ViewModels\Core\GeneralBehaviors\Legacy\DelegateCommandBehavior.cs" />
+    <Compile Include="ViewModels\Core\GeneralBehaviors\Legacy\IMutabilityCheckerBehavior.cs" />
     <Compile Include="ViewModels\Core\BehaviorInterfaces\PropertyBehaviors\IViewModelFactoryBehavior.cs" />
-    <Compile Include="ViewModels\Core\PropertyBehaviors\Legacy\PropagateVMContextBehavior.cs" />
-    <Compile Include="ViewModels\Core\PropertyBehaviors\ViewModelFactoryBehavior.cs" />
+    <Compile Include="ViewModels\Core\GeneralBehaviors\Legacy\PropagateVMContextBehavior.cs" />
+    <Compile Include="ViewModels\Core\GeneralBehaviors\ViewModelFactoryBehavior.cs" />
     <Compile Include="ViewModels\Core\TypeDescriptor\SimplePropertyDescriptor.cs" />
     <Compile Include="ViewModels\Core\TypeDescriptor\PropertyDescriptorBehavior.cs" />
     <Compile Include="ViewModels\Core\TypeDescriptor\TypeDescriptorBehavior.cs" />
@@ -223,8 +223,8 @@
     <Compile Include="ViewModels\Core\Validation\ValidationType.cs" />
     <Compile Include="ViewModels\Core\Validation\ViewModelBehaviors\ViewModelValidationBehavior.cs" />
     <Compile Include="ViewModels\Core\Validation\Validator.cs" />
-    <Compile Include="ViewModels\Core\ViewModelBehaviors\IViewModelBehaviorContext.cs" />
-    <Compile Include="ViewModels\Core\ViewModelBehaviors\ViewModelBehavior.cs" />
+    <Compile Include="ViewModels\Core\GeneralBehaviors\ViewModelBehaviors\IViewModelBehaviorContext.cs" />
+    <Compile Include="ViewModels\Core\GeneralBehaviors\ViewModelBehaviors\ViewModelBehavior.cs" />
     <Compile Include="ViewModels\Core\VMDescriptorBuilder\Validators\CollectionPropertyValidatorBuilder.cs" />
     <Compile Include="ViewModels\Core\VMDescriptorBuilder\Validators\CollectionValidatorBuilder.cs" />
     <Compile Include="ViewModels\Core\VMDescriptorBuilder\Validators\PropertyValidatorBuilder.cs" />
@@ -267,21 +267,21 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\ICanInitializeFrom.cs" />
-    <Compile Include="ViewModels\Core\PropertyBehaviors\Legacy\AllowInvalidDisplayValuesBehavior.cs" />
-    <Compile Include="ViewModels\Core\PropertyBehaviors\Legacy\DisplayValueValidationBehavior.cs" />
-    <Compile Include="ViewModels\Core\PropertyBehaviors\PropertyBehaviors\ValueCacheBehavior.cs" />
-    <Compile Include="ViewModels\Core\PropertyBehaviors\Legacy\CalculatedPropertyBehavior.cs" />
-    <Compile Include="ViewModels\Core\PropertyBehaviors\Legacy\DynamicFieldGroups.cs" />
-    <Compile Include="ViewModels\Core\PropertyBehaviors\Legacy\InstancePropertyBehavior.cs" />
+    <Compile Include="ViewModels\Core\GeneralBehaviors\Legacy\AllowInvalidDisplayValuesBehavior.cs" />
+    <Compile Include="ViewModels\Core\GeneralBehaviors\Legacy\DisplayValueValidationBehavior.cs" />
+    <Compile Include="ViewModels\Core\GeneralBehaviors\PropertyBehaviors\ValueCacheBehavior.cs" />
+    <Compile Include="ViewModels\Core\GeneralBehaviors\Legacy\CalculatedPropertyBehavior.cs" />
+    <Compile Include="ViewModels\Core\GeneralBehaviors\Legacy\DynamicFieldGroups.cs" />
+    <Compile Include="ViewModels\Core\GeneralBehaviors\Legacy\InstancePropertyBehavior.cs" />
     <Compile Include="ViewModels\Core\BehaviorInterfaces\PropertyBehaviors\IDisplayValueAccessorBehavior.cs" />
-    <Compile Include="ViewModels\Core\PropertyBehaviors\Legacy\IManualUpdateBehavior.cs" />
-    <Compile Include="ViewModels\Core\PropertyBehaviors\Legacy\IHandlePropertyChangedBehavior.cs" />
-    <Compile Include="ViewModels\Core\PropertyBehaviors\Legacy\IHandlePropertyChangingBehavior.cs" />
-    <Compile Include="ViewModels\Core\PropertyBehaviors\Legacy\IValidationBehavior.cs" />
-    <Compile Include="ViewModels\Core\PropertyBehaviors\Legacy\MappedPropertyBehavior.cs" />
-    <Compile Include="ViewModels\Core\PropertyBehaviors\Legacy\PropertyChangedBehavior.cs" />
-    <Compile Include="ViewModels\Core\PropertyBehaviors\PropertyBehaviors\DisplayValueAccessorBehavior.cs" />
-    <Compile Include="ViewModels\Core\PropertyBehaviors\Legacy\ValidationBehavior.cs" />
+    <Compile Include="ViewModels\Core\GeneralBehaviors\Legacy\IManualUpdateBehavior.cs" />
+    <Compile Include="ViewModels\Core\GeneralBehaviors\Legacy\IHandlePropertyChangedBehavior.cs" />
+    <Compile Include="ViewModels\Core\GeneralBehaviors\Legacy\IHandlePropertyChangingBehavior.cs" />
+    <Compile Include="ViewModels\Core\GeneralBehaviors\Legacy\IValidationBehavior.cs" />
+    <Compile Include="ViewModels\Core\GeneralBehaviors\Legacy\MappedPropertyBehavior.cs" />
+    <Compile Include="ViewModels\Core\GeneralBehaviors\Legacy\PropertyChangedBehavior.cs" />
+    <Compile Include="ViewModels\Core\GeneralBehaviors\PropertyBehaviors\DisplayValueAccessorBehavior.cs" />
+    <Compile Include="ViewModels\Core\GeneralBehaviors\Legacy\ValidationBehavior.cs" />
     <Compile Include="ViewModels\Core\TypeDescriptor\VMPropertyDescriptor.cs" />
     <Compile Include="ViewModels\IVMValueConverter.cs" />
     <Compile Include="ViewModels\Core\VMDescriptorBuilder\IVMPropertyBuilderProvider.cs" />
@@ -319,6 +319,8 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="ViewModels\Core\BehaviorInterfaces\CollectionBehaviors\" />
+    <Folder Include="ViewModels\Core\Kernel\" />
+    <Folder Include="ViewModels\Core\ViewModelBehaviors\" />
     <Folder Include="Views\TestDoubles\" />
   </ItemGroup>
   <ItemGroup>
