--- a/trunk/MvvmTest/MvvmTest.csproj
+++ b/trunk/MvvmTest/MvvmTest.csproj
@@ -59,6 +59,7 @@
     </CodeAnalysisDependentAssemblyPaths>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ApiTests\ViewModels\InheritanceTests.cs" />
     <Compile Include="ApiTests\ViewModels\LocalPropertyTests.cs" />
     <Compile Include="ApiTests\ViewModels\CollectionTests.cs" />
     <Compile Include="ApiTests\ViewModels\CommandPropertyTests.cs" />
