--- a/trunk/MvvmContribTest/MvvmContribTest.csproj
+++ b/trunk/MvvmContribTest/MvvmContribTest.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Screens\ApplicationCommandManagerTest.cs" />
     <Compile Include="Screens\FindScreenTest.cs" />
+    <Compile Include="ViewModels\EnumSelectionWithCustomValidationTests.cs" />
     <Compile Include="ViewModels\Selection\LookupPopulatorCollectionBehaviorTests.cs" />
     <Compile Include="ApiTests\ViewModels\Selection\VMs\UserVM.cs" />
     <Compile Include="ViewModels\VMs\KeywordSelectionVM.cs" />
