--- a/trunk/MvvmTest/MvvmTest.csproj
+++ b/trunk/MvvmTest/MvvmTest.csproj
@@ -60,6 +60,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApiTests\ViewModels\InheritanceTests.cs" />
+    <Compile Include="ApiTests\ViewModels\InheritanceWithGenericsTests.cs" />
     <Compile Include="ApiTests\ViewModels\LocalPropertyTests.cs" />
     <Compile Include="ApiTests\ViewModels\CollectionTests.cs" />
     <Compile Include="ApiTests\ViewModels\CommandPropertyTests.cs" />
