--- a/trunk/MvvmContribTest/MvvmContribTest.csproj
+++ b/trunk/MvvmContribTest/MvvmContribTest.csproj
@@ -59,6 +59,7 @@
     <Compile Include="..\MvvmTest\PropertyChangedCounter.cs">
       <Link>PropertyChangedCounter.cs</Link>
     </Compile>
+    <Compile Include="ApiTests\ViewModels\PerformanceTests.cs" />
     <Compile Include="ApiTests\ViewModels\Selection\Domain\Department.cs" />
     <Compile Include="ApiTests\ViewModels\Selection\SingleSelectionTests.cs" />
     <Compile Include="ApiTests\ViewModels\Selection\SimpleSingleSelectionTests.cs" />
