WindowService/DialogService refactored.

--- a/trunk/MvvmContrib/MvvmContrib.csproj
+++ b/trunk/MvvmContrib/MvvmContrib.csproj
@@ -108,6 +108,7 @@
     <Compile Include="Extensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Screens\ApplicationCommandManager.cs" />
+    <Compile Include="Testing\MessageBoxResponderSetup.cs" />
     <Compile Include="ViewModels\Behaviors\SettableListDisplayValueBehavior.cs" />
     <Compile Include="ViewModels\EnumLocalizer.cs" />
     <Compile Include="ViewModels\EnumSelectionPropertyBuilder.cs" />
@@ -135,6 +136,7 @@
     <Compile Include="Views\CustomKeyGesture.cs" />
     <Compile Include="Views\CustomKeyGestureExtension.cs" />
     <Compile Include="Views\KeyGestureViewBinderExtension.cs" />
+    <Compile Include="Testing\MessageBoxTestService.cs" />
     <Compile Include="Views\SelectionBinderExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
