--- a/trunk/Mvvm/Mvvm.csproj
+++ b/trunk/Mvvm/Mvvm.csproj
@@ -122,6 +122,9 @@
     <Compile Include="Screens\ScreenConductor.cs" />
     <Compile Include="Screens\ScreenFactory.cs" />
     <Compile Include="ServiceLocator.cs" />
+    <Compile Include="Testing\ResponderBase.cs" />
+    <Compile Include="Testing\ResponderSetupBase.cs" />
+    <Compile Include="Testing\StringExpectation.cs" />
     <Compile Include="ViewModels\- No Namespace -\RefreshScope.cs" />
     <Compile Include="ViewModels\- No Namespace -\Validation\ValidationMode.cs" />
     <Compile Include="ViewModels\- No Namespace -\Validation\ValidationScope.cs" />
@@ -306,14 +309,17 @@
     <Compile Include="Views\Binder\DefaultPropertyBuildStep.cs" />
     <Compile Include="Views\Binder\VMPropertyBinder.cs" />
     <Compile Include="Views\CommonBehaviors.cs" />
+    <Compile Include="Views\WindowService\DialogCloseHandler.cs" />
+    <Compile Include="Views\WindowService\DialogService.cs" />
     <Compile Include="Views\IView.cs" />
-    <Compile Include="Views\IWindowService.cs" />
+    <Compile Include="Views\WindowService\IWindowService.cs" />
     <Compile Include="Views\ScreenConductorAdapter.cs" />
-    <Compile Include="Views\TestDialogService.cs" />
+    <Compile Include="Testing\DialogTestService.cs" />
     <Compile Include="Views\View.cs" />
     <Compile Include="Views\ViewBinder.cs" />
     <Compile Include="Views\ViewFactory.cs" />
-    <Compile Include="Views\WindowService.cs" />
+    <Compile Include="Views\WindowService\WindowCloseHandler.cs" />
+    <Compile Include="Views\WindowService\WindowService.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="license.txt" />
