--- a/trunk/Mvvm/Mvvm.csproj
+++ b/trunk/Mvvm/Mvvm.csproj
@@ -179,6 +179,9 @@
     <Compile Include="ViewModels\Core\Commands\WaitCursorBehavior.cs" />
     <Compile Include="ViewModels\Core\GeneralBehaviors\PropertyBehaviors\RefreshBehavior.cs" />
     <Compile Include="ViewModels\Core\GeneralBehaviors\PropertyBehaviors\ChildScreenBehavior.cs" />
+    <Compile Include="ViewModels\Core\Validation\CollectionValidationArgs.cs" />
+    <Compile Include="ViewModels\Core\Validation\CollectionValidator.cs" />
+    <Compile Include="ViewModels\Core\Validation\CollectionValidatorState.cs" />
     <Compile Include="ViewModels\Core\VMDescriptorBuilder\VMDescriptorConfiguration.cs" />
     <Compile Include="ViewModels\Core\VMDescriptor\IVMDescriptorBuilder.cs" />
     <Compile Include="ViewModels\Core\GeneralBehaviors\CacheBehavior.cs" />
